small screen display fix
the smallest screens look better with all fonts at 8px, including
titles. smaller is unreadable, bigger adds too much clutter

--- a/style/size4.css
+++ b/style/size4.css
@@ -48,7 +48,7 @@ img {
 	padding:1px;
 }
 .prayer_name {
-	font-size: 10px;
+	font-size: 8px;
 }
 .prayer_text {
 	margin-left: 0px;
